Update and rename readme.txt to readme

--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 Hello everybody!
 
-This is repository of project School LMS.
+This is repository of project **School LMS**.
 Our team: Aslkhon Khoshimkhojaev
 Muso Ismailov
 Azizbek Muminov
